# BlindSpot

./: .backboard.json  .env.local  .env.local.template  .gitignore  CONFIG.md  README.md  agent.py  agent_config.py  backboard_store.py  dart_defines.json.example  google_maps.py  navigation.py  obstacle.py  pubspec.yaml  pyproject.toml  requirements-server.txt  run_agent.sh  run_app.sh  run_app_release.sh  run_flutter.sh  run_simulator.sh  server.py  test_obstacle_local.py  token_server.py
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/cam_preview/: MainActivity.kt
android/app/src/main/kotlin/com/example/sesesesese/: MainActivity.kt
android/app/src/main/res/values/: strings.xml  styles.xml
deploy/: DIGITALOCEAN_DROPLET.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: config.dart  main.dart  voice_service.dart
lib/core/haptics/: README.md  haptics.dart
lib/features/debug/: haptics_debug_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
mcp_client/: __init__.py  agent_tools.py  server.py  util.py
scripts/: download_yolov8n_onnx.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
