[project]
name = "livekit-voice-agent"
version = "0.1.0"
requires-python = ">=3.10, <3.13"
dependencies = [
    "backboard-sdk>=1.4.12",
    "livekit-agents[google]>=1.3.12",
    "livekit-plugins-noise-cancellation>=0.2.5",
    # "livekit-plugins-openai>=1.3.12",  # Commented out - using Google Gemini instead
    "google-genai>=0.4.0",
    "mcp[cli]>=1.26.0",
    "pydantic-ai-slim[mcp,openai]>=1.51.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "livekit-plugins-google<1.4",
    "googlemaps>=4.10.0",
]
