[project]
name = "livekit-voice-agent"
version = "0.1.0"
requires-python = ">=3.10, <3.13"
dependencies = [
    "backboard-sdk>=1.4.12",
    "livekit-agents[google,elevenlabs,deepgram,silero,turn-detector]>=1.3.12",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "google-genai>=0.4.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "livekit-plugins-google<1.4",
    "googlemaps>=4.10.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "ultralytics>=8.4.14",
    "onnx>=1.20.1",
    "onnxslim>=0.1.84",
]
